<resources>
    <string name="app_name">Calculator</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnx">*</string>
    <string name="btnDi">/</string>
    <string name="btnP">+</string>
    <string name="btnclr">C</string>
    <string name="btnLB">(</string>
    <string name="btnRB">)</string>
    <string name="btnM">-</string>
    <string name="btnE">=</string>
    <string name="btnZe">00</string>
    <string name="btnZ">0</string>
    <string name="btnD">.</string>



</resources>