<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2B2B"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textSize="40sp"
        android:gravity="end"
        android:textColor="@color/purple_200"
        android:ellipsize="start"
        android:singleLine="true"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:text=""
        android:textSize="60sp"
        android:gravity="end"
        android:textColor="@color/white"
        android:ellipsize="start"
        android:singleLine="true"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn3"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnx"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn4"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn5"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn6"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnDi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnDi"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn7"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn8"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btn9"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnP"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnZe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnZe"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnZ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnZ"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnD"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnM"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnclr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnclr"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnLB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnLB"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnRB"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:text="@string/btnE"
                android:textColor="@color/black" />
        </LinearLayout>






    </LinearLayout>



</LinearLayout>